--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,6 +4,7 @@ layout: default
 
 <div class="home">
   {%- if page.title -%}
+    <img src="/images/ttl_small.png" alt="logo" />
     <h1 class="page-heading">{{ page.title }}</h1>
   {%- endif -%}
 
